# Spark

./: .gitignore  CMakeLists.txt  Spark.sln  SparkConfig.h.in
Spark/: AdvancedBox.cpp  AdvancedBox.h  Button.h  CollisionBox.cpp  CollisionBox.h  CollisionInfo.h  Dropdown.cpp  Dropdown.h  Editor.cpp  Editor.h  EditorSidebar.cpp  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameState.cpp  GameState.h  ISprite.cpp  ISprite.h  ImmovableEntity.cpp  ImmovableEntity.h  Interactive.cpp  Interactive.h  LevelReader.cpp  LevelReader.h  Menu.cpp  Menu.h  MovableEntity.cpp  MovableEntity.h  Obstacle.cpp  Obstacle.h  PlayState.cpp  PlayState.h  Player.cpp  Player.h  PlayerFalling.cpp  PlayerFalling.h  PlayerJumping.cpp  (+14 more)
libs/SFML/: CMakeCache.txt  Makefile  SFMLSharedTargets.cmake  cmake_install.cmake
libs/SFML/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
libs/SFML/src/SFML/: Makefile  cmake_install.cmake
libs/SFML/src/SFML/Audio/: Makefile  cmake_install.cmake
libs/SFML/src/SFML/Graphics/: Makefile  cmake_install.cmake
libs/SFML/src/SFML/Network/: Makefile  cmake_install.cmake
libs/SFML/src/SFML/System/: Makefile  cmake_install.cmake
libs/SFML/src/SFML/Window/: Makefile  cmake_install.cmake
libs/SFML/tools/pkg-config/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
src/: Spark.vcxproj  Spark.vcxproj.filters
src/include/: AdvancedBox.cpp  AdvancedBox.h  CollisionBox.h  Editor.h  EditorSidebar.h  Enemy.h  Entity.h  Game.h  GameState.h  ID.h  ISprite.h  Interactive.h  LevelReader.cpp  LevelReader.h  Menu.h  PlayState.h  Player.h  PlayerFalling.h  PlayerJumping.h  PlayerOnGround.h  PlayerState.h  SparkConfig.h.in  State.h  TextRenderer.h  VisualTile.h
src/src/: Button.cpp  CollisionBox.cpp  Editor.cpp  Enemy.cpp  Entity.cpp  Game.cpp  GameState.cpp  ISprite.cpp  Interactive.cpp  LevelReader.cpp  MovableEntity.cpp  PlayState.cpp  PlayerFalling.cpp  PlayerJumping.cpp  PlayerOnGround.cpp  PlayerState.cpp  Spark.cpp  VisualTile.cpp
